hphp/hack/test/typecheck/shape_key_lazy_class.php.exp
ERROR: File "shape_key_lazy_class.php", line 4, characters 24-34:
Shape field name must not be a `self::class` expression (Parsing[1002])
