hphp/hack/test/typecheck/shape_key_lazy_class.php
<?hh

class C {
  const type T = shape(self::class => int);
}
type T = shape(C::class => string);
